saw-web/src/themes/base/app/_layout.scss
$header-bar-height: 64px;

@mixin flex-properties-for-name($name: null) {
  $flexName: 'flex';

  @if $name != null {
    $flexName: 'flex-#{$name}';
    $name : '-#{$name}';
  } @else {
    $name : '';
  }

  @for $i from 0 through 20 {
    $value : #{$i * 5 + '%'};

    .#{$flexName}-#{$i * 5} {
      flex: 1 1 $value;
    }

    .layout-row > .#{$flexName}-#{$i * 5} {
      flex: 1 1 $value;
    }

    .layout-column > .#{$flexName}-#{$i * 5} {
      flex: 1 1 $value;
    }
  }
}

@include flex-properties-for-name();
@include flex-properties-for-name(xs);
@include flex-properties-for-name(gt-xs);
@include flex-properties-for-name(sm);
@include flex-properties-for-name(gt-sm);
@include flex-properties-for-name(md);
@include flex-properties-for-name(gt-md);
@include flex-properties-for-name(lg);
@include flex-properties-for-name(gt-lg);
@include flex-properties-for-name(xl);

.app-container {
  max-width: 1600px;
  width: 100%;
  margin: 0 auto;
}

.root-container {
  position: relative;
  display: flex;
  min-height: 100vh;
  max-height: 100vh;
  flex-direction: column;

  & > .main-content {
    display: flex;
    flex: 1;
    position: relative;
    overflow: auto;
    // padding-top: $header-bar-height;
  }
}

// used to hide sidebar on screens wider than 1600px (greater than md)
.sidebar-hider {
  // the z-index of the modal-backdrop is 79
  // the z-index of the sidenav is 60
  z-index: 78;
  background-color: rgb(192, 192, 192);
}

// ********************** FOOTER *******************************
.footer-container {
  display: flex;
  justify-content: center;
  padding: 5px 0 15px;
}

.synchronoss-logo {
  background-image: url($powered-by-synchronoss-logo-path);
  height: 31px;
  width: 96px;
  background-repeat: no-repeat;
  background-size: contain;
}

.left-side-nav {
  > .layout-row {
    height: 100%;
  }

  &_btn {
    margin-top: 12px;
    position: absolute;
  }
}

.render-content {
  width: 100%;
  overflow: hidden;
}

